# MullvadConfigs

./: .gitignore  MullvadConfigs.cabal  ProcessConfigs.hs  README.md  default.nix  flake.nix  fourmolu.yaml  hie.yaml  package.yaml  stack.yaml
app/: Main.hs
src/: Config.hs  Peer.hs  ProcessConfigs.hs  Server.hs
src/Data/: CountryFlag.hs  CustomIP.hs  Network.hs
src/Data/Network/: Ip.hs  Ipv4.hs  Ipv6.hs  Port.hs
