cabal-version: 2.4
name:           MullvadConfigs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sandydoo/MullvadConfigs#readme>

homepage:       https://github.com/sandydoo/MullvadConfigs#readme
bug-reports:    https://github.com/sandydoo/MullvadConfigs/issues

author:         Sander Melnikov
maintainer:     Sander Melnikov <hey@sandydoo.me>
copyright:      © 2020 Sander Melnikov

license:        BSD-3-Clause
license-file:   LICENSE

build-type:     Simple
extra-doc-files:
  README.md

source-repository head
  type: git
  location: https://github.com/sandydoo/MullvadConfigs

library
  hs-source-dirs:
      src
  default-extensions: NamedFieldPuns OverloadedStrings RecordWildCards
  ghc-options: -Wall
  exposed-modules:
      Config
      Data.CountryFlag
      Data.Network
      Peer
      Server
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , http-conduit
    , iproute
    , lens
    , lens-aeson
    , relude
    , text
    , zip
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010

executable create-mullvad-configs
  main-is: Main.hs
  hs-source-dirs:
    app
  default-extensions: NamedFieldPuns OverloadedStrings RecordWildCards
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MullvadConfigs
    , aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , http-conduit
    , iproute
    , lens
    , lens-aeson
    , relude
    , text
    , zip
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
