cabal-version:  2.4
name:           MullvadConfigs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sandydoo/MullvadConfigs#readme>

homepage:       https://github.com/sandydoo/MullvadConfigs#readme
bug-reports:    https://github.com/sandydoo/MullvadConfigs/issues

author:         Sander Melnikov
maintainer:     Sander Melnikov <hey@sandydoo.me>
copyright:      © 2020 Sander Melnikov

license:        BSD-3-Clause
license-file:   LICENSE

build-type:     Simple
extra-doc-files:
  README.md

source-repository head
  type: git
  location: https://github.com/sandydoo/MullvadConfigs

flag dev
  description:
    Turn on development settings. Build with all errors and without any
    optimizations.
  default: False
  manual: True

common build-options
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

  if flag(dev)
    ghc-options:
      -O0 -Wall
  else
    ghc-options: -O2 -Wall

common dependencies
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , http-conduit
    , lens
    , lens-aeson
    , megaparsec
    , relude
    , text
    , text-builder
    , zip
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

library
  import: build-options, dependencies
  hs-source-dirs:
    src
  exposed-modules:
    Config
    Data.CountryFlag
    Data.Network
    Data.Network.Ip
    Data.Network.Ipv4
    Data.Network.Ipv6
    Data.Network.Port
    Peer
    Server

executable create-mullvad-configs
  import: build-options, dependencies
  main-is: Main.hs
  hs-source-dirs:
    app
  build-depends: MullvadConfigs
